--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,16 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['precios']">Precios</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated()">
         <a class="nav-link" [routerLink]="['protegida']">Protegida</a>
       </li>
     </ul>
 
     <span class="navbar-text">
-      <button (click)="login()" type="button" class="btn btn-outline-primary">Log In</button>
+      <button (click)="login()" type="button" class="btn btn-outline-primary btn-sm" *ngIf="!auth.isAuthenticated()">Log In</button>
+    </span>
+    <span class="navbar-text">
+      <button (click)="logout()" type="button" class="btn btn-outline-danger btn-sm" *ngIf="auth.isAuthenticated()">Log Out</button>
     </span>
 
   </div>
